--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="flex items-center gap-4 mb-6">
       <img src="https://i.postimg.cc/XYwhK178/IMG-20250315-161334-906.jpg" class="w-16 h-16 rounded-xl shadow-md" alt="App Logo">
       <div class="flex-1">
-        <h1 class="text-2xl font-bold">Rs Live Sports</h1>
+        <h1 class="text-2xl font-bold">Rs Sports</h1>
         <p class="text-sm text-gray-400">by Rs Sports</p>
       </div>
       <button id="installBtn" class="bg-blue-600 hover:bg-blue-700 transition px-4 py-2 rounded-lg font-semibold shadow">Install</button>
